@@ -147,7 +147,8 @@ class Provider(kodion.AbstractProvider):
                  'youtube.are.you.sure': 30703,
                  'youtube.subtitles.download': 30705,
                  'youtube.pre.download.subtitles': 30706,
-                 'youtube.untitled': 30707
+                 'youtube.untitled': 30707,
+                 'youtube.video.play_audio_only': 30708
                  }
 
     def __init__(self):
